update form crypt

--- a/stock_dash.html
+++ b/stock_dash.html
@@ -64,7 +64,7 @@
                                                 <li><a href="umcsi.html" target="_top">UMCSI</a></li>
                                                 <li><a href="housing.html" target="_top">Housing</a></li>
                                                 <li><a href="screener.html" target="_top">Stock Screener</a></li>
-                                                <li><a href="black_candle.html" target="_top">Secrets of Black Candle</a></li>
+                                                <li><a href="black_candle.html" target="_top">Secrets of the Candlestick</a></li>
 											</ul>
 										</div>
 										<div class="col-md-3 mg-col">
