--- a/black_candle.html
+++ b/black_candle.html
@@ -61,7 +61,7 @@
                                                 <li><a href="umcsi.html">UMCSI</a></li>
                                                 <li><a href="housing.html">Housing</a></li>
                                                 <li><a href="screener.html">Stock Screener</a></li>
-                                                <li><a href="black_candle.html" target="_top">Secrets of Black Candle</a></li>
+                                                <li><a href="black_candle.html" target="_top">Secrets of the Candlestick</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-3 mg-col">
