--- a/index-2.html
+++ b/index-2.html
@@ -55,7 +55,7 @@
                                                 <li><a href="umcsi.html">UMCSI</a></li>
                                                 <li><a href="housing.html">Housing</a></li>
                                                 <li><a href="screener.html">Stock Screener</a></li>
-                                                <li><a href="black_candle.html" target="_top">Secrets of Black Candle</a></li>
+                                                <li><a href="black_candle.html" target="_top">Secrets of the Candlestick</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-3 mg-col">
@@ -64,6 +64,7 @@
                                                 <li><a href="ism-services.html">ISM Services</a></li>
                                                 <li><a href="ism-heatmaps.html">ISM Heatmaps</a></li>
                                                 <li><a href="stock_dash.html">Stock Dashboard</a></li>
+                                                <li><a href="bitmex_calc.html" target="_top">Bitmex Crypto Calculator</a></li>
                                             </ul>
                                         </div>
                                     </li>
