--- a/bitmex_calc.html
+++ b/bitmex_calc.html
@@ -87,36 +87,30 @@
 		</nav>
 		<!-- End Header -->
 
-		<!-- Button Tabs Centered -->
-		<section id="elements-buttons" class="pt100 pb80" style="width:100%; height:100%" align-content= "center">
+		<!-- Start Typography -->
+		<section id="elements-typography" class="pt100 pb100">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center mt40 pb40">
 						<h1 style="color:white;"><strong>BitMex Crypto Modeller</strong></h1>
 					</div>
-					<button id="BITCOIN" class="btn btn-md btn-primary btn-round">Bitcoin</button>
-					<button id="SOLANA" class="btn btn-md btn-primary btn-round">Solana</button>
-					<button id="CARDANO" class="btn btn-md btn-primary btn-round">Cardano</button>
-					<button id="POLKADOT" class="btn btn-md btn-primary btn-round">Polkadot</button>
-				</div>
-				<div class="row">
-					<p id="demo"></p>
-
+					<div class="col-md-10 mr-auto text-center">
+						<div class="btn-group">
+						<button id="BITCOIN" class="btn btn-md btn-primary btn-round">Bitcoin</button>
+						<button id="SOLANA" class="btn btn-md btn-primary btn-round">Solana</button>
+						<button id="CARDANO" class="btn btn-md btn-primary btn-round">Cardano</button>
+						<button id="POLKADOT" class="btn btn-md btn-primary btn-round">Polkadot</button>
+						</div>
+					</div>
 				</div>
 			</div>
-			
-		</section>
-
-
-		<!-- Start Typography -->
-		<section id="elements-typography" class="pt100 pb100">
 			<div class="container">
 				<div class="row">
 
 					<div class="col-md-10 mr-auto mb20">
 
 						<div class="col-sm-6 mb40 text-left">
-							<h3 style="color:white"><strong> Output</strong></h3>
+							<h5 style="color:white;padding:20px" ><strong>Enter Lim Entry, Stop Loss & Target in USD</strong></h5>
 							<div class="container">
 											 <div class="login-box">
 											 	<form id="frm1">
@@ -162,7 +156,7 @@
 						</div>
 
 						<div class="col-sm-6 mb40 text-left">
-							<h3 style="color:white"><strong> Input</strong></h3>
+							<h5 style="color:white;padding:20px"><strong>View required margin and profit/loss impact</strong></h5>
 							<div class="container">
 								 <div class="login-box">
 									  
