--- a/black_candle.html
+++ b/black_candle.html
@@ -112,11 +112,12 @@
 
                             var url1 = "https://financialmodelingprep.com/api/v3/quotes/nyse?apikey=c01b3c8e189822588988574a0c3957dd"
                             var url2 = "https://financialmodelingprep.com/api/v3/quotes/nasdaq?apikey=c01b3c8e189822588988574a0c3957dd"
-                            
+                            var url3 = "https://financialmodelingprep.com/api/v3/stock-screener?marketCapMoreThan=1000000000&volumeMoreThan=1000000&exchange=NYSE,NASDAQ&apikey=c01b3c8e189822588988574a0c3957dd"
 
                             const urls = [
                               url1,
                               url2,
+                              url3,
                             ]
 
  
