update ism data and get fear and greed index

--- a/index.html
+++ b/index.html
@@ -79,6 +79,18 @@
                             </li>
                             
 
+                            <script>
+
+
+                                $(document).ready(function () {
+
+                                    fetchgreed();
+
+
+                                });
+
+                            </script>
+
 
                         </ul>
 
