--- a/black_candle.html
+++ b/black_candle.html
@@ -50,6 +50,10 @@
                             <!-- Each section must have corresponding ID ( #hero -> id="hero" ) -->
                             <li><a href="index-2.html">Home</a></li>
                             <li><a href="index-2.html#about">About</a></li>
+                            <li><a href="index.html#table">Stock News</a></li>
+                            <li><a href="index.html#table2">Wall Street Journal</a></li>
+                            <li><a href="index.html#table4">Bloomberg</a></li>
+                            <li><a href="index.html#table3">Crypto News</a></li>
                             <li class="dropdown megamenu vos">
                                 <a class="dropdown-toggle">Elements<i class="ion-ios-arrow-down"></i></a>
                                 <ul class="dropdown-menu fullwidth">
