update average volumes of stocks

--- a/black_candle.html
+++ b/black_candle.html
@@ -132,6 +132,19 @@
 
                             });
 
+
+
+
+
+
+
+
+
+
+
+
+
+
                     </script>
                     
                 </div>
@@ -140,6 +153,7 @@
              <div id="grid" style="max-width: 440px;margin: 0px auto"></div>
 
             <table id="table" class="display" width="40%"> </table> 
+            <table id="table2" class="display" width="40%"> </table> 
 
 
         </section>
