start to add pairs trade analysis

--- a/stock_dash.html
+++ b/stock_dash.html
@@ -109,6 +109,9 @@
 				    	<form id="frm1">
 						  <input type="text" name="fname" value="AAPL" style="width:10%">
 						</form> 
+						<form id="frm2">
+						  <input type="text" name="fname2" value="AMZN" style="width:10%">
+						</form> 
 						<button id="TICKER" class="btn btn-md btn-primary btn-round">Search</button>
 				    </div>
 
