--- a/screener.html
+++ b/screener.html
@@ -45,7 +45,7 @@
 
 				<div id="navbar" class="navbar-collapse collapse">
 					<div class="container">
-						<ul class="nav navbar-nav center-menu">
+						<ul class="nav navbar-nav menu-center">
 
 							<!-- Each section must have corresponding ID ( #hero -> id="hero" ) -->
 							<li><a href="index.html">Home</a></li>
@@ -54,8 +54,9 @@
                             <li><a href="index.html#table2">Wall Street Journal</a></li>
                             <li><a href="index.html#table4">Bloomberg</a></li>
                             <li><a href="index.html#table3">Crypto News</a></li>
+                            <li><a href="index.html#table5">FMP Articles</a></li>
 							<li class="dropdown megamenu vos">
-								<a class="dropdown-toggle">Elements<i class="ion-ios-arrow-down"></i></a>
+								<a class="dropdown-toggle">Data<i class="ion-ios-arrow-down"></i></a>
 								<ul class="dropdown-menu fullwidth">
 									<li class="megamenu-content withdesc">
 										<div class="col-md-3 mg-col">
