--- a/gdp.html
+++ b/gdp.html
@@ -36,7 +36,7 @@
 
                 <div id="navbar" class="navbar-collapse collapse">
                     <div class="container">
-                        <ul class="nav navbar-nav menu-right">
+                        <ul class="nav navbar-nav menu-center">
 
                             <!-- Each section must have corresponding ID ( #hero -> id="hero" ) -->
                             <li><a href="index.html">Home</a></li>
@@ -45,6 +45,8 @@
                             <li><a href="index.html#table2">Wall Street Journal</a></li>
                             <li><a href="index.html#table4">Bloomberg</a></li>
                             <li><a href="index.html#table3">Crypto News</a></li>
+                            <li><a href="index.html#table5">FMP Articles</a></li>
+
                             <li class="dropdown megamenu vos">
                                 <a class="dropdown-toggle">Elements<i class="ion-ios-arrow-down"></i></a>
                                 <ul class="dropdown-menu fullwidth">
