add ism services heatmap

--- a/ism-heatmaps.html
+++ b/ism-heatmaps.html
@@ -146,8 +146,71 @@
                     </tr>
                     </tbody></table>
 
+</div>
 
-        </div>
+            <div class="container">
+                <div class="row text-center">
+
+                    <div class="col-md-12 text-center">
+                        <h1><strong>ISM Services Heatmap</strong></h1>
+                        <p class="lead">The ISM Services Indices can be assessed independently of each other from the lowest (red) to the highest (green) in the timerange to provide a view of direction (growing/slowing/contracting) and rate of change</p>
+                    </div>
+
+                </div>
+            </div>
+
+
+<table style="width:1400px" class="container">
+                    <tbody>
+                    <tr>
+                        <td style="width:150px">
+                        <div id="chartDiv16" style="height: 700px;margin: 0px auto"></div>
+                        </div>
+                        </td>
+                        <td style="width:100px">
+                        <div id="chartDiv17" style="height: 700px;margin: 0px auto"></div>
+                        </div>
+                        </td>
+                        <td style="width:100px">
+                        <div id="chartDiv18" style="height: 700px;margin: 0px auto"></div>
+                        </div>
+                        </td>
+                        <td style="width:100px">
+                        <div id="chartDiv19" style="height: 700px;margin: 0px auto"></div>
+                        </div>
+                        </td>
+                        <td style="width:100px">
+                        <div id="chartDiv20" style="height: 700px;margin: 0px auto"></div>
+                        </div>
+                        </td>
+                        <td style="width:100px">
+                        <div id="chartDiv21" style="height: 700px;margin: 0px auto"></div>
+                        </div>
+                        </td>
+                        <td style="width:100px">
+                        <div id="chartDiv22" style="height: 700px;margin: 0px auto"></div>
+                        </div>
+                        </td>
+                        <td style="width:100px">
+                        <div id="chartDiv23" style="height: 700px;margin: 0px auto"></div>
+                        </div>
+                        </td>
+                        <td style="width:100px">
+                        <div id="chartDiv24" style="height: 700px;margin: 0px auto"></div>
+                        </div>
+                        </td>
+                        <td style="width:100px">
+                        <div id="chartDiv25" style="height: 700px;margin: 0px auto"></div>
+                        </div>
+                        </td>
+                        <td style="width:100px">
+                        <div id="chartDiv26" style="height: 700px;margin: 0px auto"></div>
+                        </div>
+                        </td>
+
+                    </tr>
+                    </tbody></table>
+        
 
 
 
