--- a/black_candle_bk.html
+++ b/black_candle_bk.html
@@ -49,8 +49,8 @@
                         <ul class="nav navbar-nav menu-center">
 
                             <!-- Each section must have corresponding ID ( #hero -> id="hero" ) -->
-                            <li><a href="index-2.html">Home</a></li>
-                            <li><a href="index-2.html#about">About</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="index.html#about">About</a></li>
                             <li><a href="index.html#table">Stock News</a></li>
                             <li><a href="index.html#table2">Wall Street Journal</a></li>
                             <li><a href="index.html#table4">Bloomberg</a></li>
