--- a/ism-services.html
+++ b/ism-services.html
@@ -67,6 +67,7 @@
                                                 <li><a href="ism-heatmaps.html">ISM Heatmaps</a></li>
                                                 <li><a href="stock_dash.html">Stock Dashboard</a></li>
                                                 <li><a href="bitmex_calc.html" target="_top">Bitmex Crypto Calculator</a></li>
+                                                <li><a href="news.html">News</a></li>
                                                 
                                             </ul>
                                         </div>
