--- a/black_candle.html
+++ b/black_candle.html
@@ -93,6 +93,7 @@
                                                 <li><a href="ism-heatmaps.html">ISM Heatmaps</a></li>
                                                 <li><a href="stock_dash.html">Stock Dashboard</a></li>
                                                 <li><a href="bitmex_calc.html" target="_top">Bitmex Crypto Calculator</a></li>
+                                                <li><a href="news.html">News</a></li>
                                             </ul>
                                         </div>
                                     </li>
