--- a/news.html
+++ b/news.html
@@ -100,6 +100,7 @@
                                                 <li><a href="ism-heatmaps.html" target="_top">ISM Heatmaps</a></li>
                                                 <li><a href="stock_dash.html" target="_top">Stock Dashboard</a></li>
                                                 <li><a href="bitmex_calc.html" target="_top">Bitmex Crypto Calculator</a></li>
+                                                <li><a href="news.html">News</a></li>
                                             </ul>
                                         </div>
                                     </li>
