--- a/news.html
+++ b/news.html
@@ -126,12 +126,8 @@
                                         { title: "Date", "data": "publishedDate"},
                                         { title: "Source Name", "data": "site" },
                                         { title: "News", "data": "text", "width": "50%" },
-                                        { title: "Link", "data": "url" 
-
-                                        ,"render": function(data){
-                                                   return '<a href="' + data + '" target="_blank">Click here</a>';
-                                                 }
-                                    },
+                                        { title: "Link", "data": "url"}
+                                    ,
                                     ];
 
                 var table = $('#table').DataTable();
@@ -177,12 +173,8 @@
                                         { title: "Title", "data": "title" },
                                        // { title: "Source Name", "data": "site" },
                                         { title: "News", "data": "content", "width": "50%" },
-                                        { title: "Link", "data": "link" 
-
-                                        ,"render": function(data){
-                                                   return '<a href="' + data + '" target="_blank">Click here</a>';
-                                                 }
-                                    },
+                                        { title: "Link", "data": "link"}
+                                    ,
                                     ];
 
                 var table5 = $('#table5').DataTable();
@@ -272,9 +264,7 @@
                     { title: "title", "width": "25%"},
                     { title: "description", "width": "50%"},
                     //{ title: "content"},
-                    { title: "Link", "url": "url", "render": function(url){
-                                                   return '<a href="' + url + '" target="_blank">Click here</a>';
-                                                 }
+                    { title: "Link", "url": "url"
                                     },
 
                   ];
