--- a/news.html
+++ b/news.html
@@ -280,13 +280,28 @@
 
                     var data_val = data.map(el => Object.values(el));
 
+                    var currentDate = new Date()
+                    var day = currentDate.getDate()
+                    var month = currentDate.getMonth() + 1
+                    var year = currentDate.getFullYear()
+                    var time = currentDate.getHours() + "" + currentDate.getMinutes();
+
+                    var timename = year + "-" + month + "-" + day + "_" + time;
+
                     var dataTables = $('#table2').DataTable ({
                           retrieve: true,
                           //paging: false,
                           data:data_val,
                           pageLength: 5,
                           columns : column_list,
-                          buttons: [ 'excel' ]
+                          buttons: [{
+                                    extend: 'excelHtml5',
+                                    title: 'wsj_' + timename
+                                    }]
+
+
+
+
                       });
 
                     dataTables.buttons().container()
