update stock dash with pair details

--- a/stock_dash.html
+++ b/stock_dash.html
@@ -304,15 +304,18 @@
             <table id="table3" class="display" width="40%"> <caption style="text-align:center;font-size:40px"><strong>Quote</strong></caption> </table> 
 			-->
             
-            <div id="epschartdiv" style="width:50%; height:500px; margin:0 auto;float: left;"></div> 
-            <div id="stockchartdiv" style="width:50%; height:500px; margin:0 auto;float: right;"></div>
+
+
+
+            <div id="stockchartdiv" style="width:50%; height:500px; margin:0 auto;float: left;"></div> 
+            <div id="stock2chartdiv" style="width:50%; height:500px; margin:0 auto;float: right;"></div>
             
 
             <div id="pegchartdiv" style="width:50%; height:500px; margin:0 auto;float: left;"></div>  
 			<div id="epsestchartdiv" style="width:50%; height:500px; margin:0 auto;float: right"></div>  
 			<div id="quartepsestchartdiv" style="width:50%; height:500px; margin:0 auto;float: left;"></div> 
 			<div id="stockchartdiv2" style="width:50%; height:500px; margin:0 auto;float: right"></div> 
-
+			<div id="epschartdiv" style="width:50%; height:500px; margin:0 auto;float: left;"></div> 
 
 		    <table id="table" class="display" width="40%"> <caption style="text-align:center;font-size:40px"><strong>Enterprise Values</strong></caption> </table>  
 		    <table id="table2" class="display" width="80%"> <caption style="text-align:center;font-size:40px"><strong>News</strong></caption> </table> 
