add resources page

--- a/black_candle.html
+++ b/black_candle.html
@@ -84,6 +84,7 @@
                                                 <li><a href="housing.html">Housing</a></li>
                                                 <li><a href="screener.html">Stock Screener</a></li>
                                                 <li><a href="black_candle.html" target="_top">Secrets of the Candlestick</a></li>
+                                                <li><a href="resources.html">Resources</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-3 mg-col">
