--- a/bitmex_calc.html
+++ b/bitmex_calc.html
@@ -69,6 +69,7 @@
                                                 <li><a href="housing.html" target="_top">Housing</a></li>
                                                 <li><a href="screener.html" target="_top">Stock Screener</a></li>
                                                 <li><a href="black_candle.html" target="_top">Secrets of the Candlestick</a></li>
+                                                <li><a href="resources.html">Resources</a></li>
 											</ul>
 										</div>
 										<div class="col-md-3 mg-col">
