--- a/resources.html
+++ b/resources.html
@@ -91,7 +91,7 @@
 
                     <div class="col-md-12 text-center">
                         <h1><strong>Resources</strong></h1>
-                        <p class="lead">Best free resouces across the vast internet on trading and investing</p>
+                        <p class="lead">Best resouces across the vast internet on trading and investing</p>
                     </div>
 
                     <table style="width:100%">
@@ -146,7 +146,32 @@
                             Live news <br>
                         </td>
                       </tr>
-
+                      <tr>
+                        <td><a href="https://pro.benzinga.com/dashboard" target="_blank">Benzinga</a></td>
+                        <td>Financial Research Tool <br>
+                            Streaming financial data platform 
+                        </td>
+                      </tr>
+                      <tr>
+                        <td><a href="https://unusualwhales.com/" target="_blank">Unusual Whales</a></td>
+                        <td>Options flow platform
+                        </td>
+                      </tr>
+                      <tr>
+                        <td><a href="https://www.barchart.com/" target="_blank">Barchart</a></td>
+                        <td>Financial Data Platform
+                        </td>
+                      </tr>
+                      <tr>
+                        <td><a href="https://stockcharts.com/h-sc/ui" target="_blank">Stock charts</a></td>
+                        <td>Charting platform
+                        </td>
+                      </tr>
+                      <tr>
+                        <td><a href="https://www.tradingview.com/chart/VA4uQVvZ/" target="_blank">Trading view</a></td>
+                        <td>Charting platform
+                        </td>
+                      </tr>
 
 
                     </table>
