update stock dash charts

--- a/resources.html
+++ b/resources.html
@@ -172,7 +172,11 @@
                         <td>Charting platform
                         </td>
                       </tr>
-
+                      <tr>
+                        <td><a href="https://maximum-pain.com/options/SPX" target="_blank">Maximum pain</a></td>
+                        <td>See options positioning
+                        </td>
+                      </tr>
 
                     </table>
 
