update stock dash charts

--- a/resources.html
+++ b/resources.html
@@ -177,6 +177,18 @@
                         <td>See options positioning
                         </td>
                       </tr>
+                      <tr>
+                        <td><a href="https://www.forexfactory.com/calendar" target="_blank">Forex Factory</a></td>
+                        <td>Economic events
+                        </td>
+                      </tr>
+                      <tr>
+                        <td><a href="https://www.investing.com/economic-calendar/" target="_blank">Investing calendar</a></td>
+                        <td>Economic events
+                        </td>
+                      </tr>
+
+
 
                     </table>
 
