add revenue, expense to stock dash board

--- a/stock_dash.html
+++ b/stock_dash.html
@@ -316,7 +316,7 @@
 
             <table id="table3" class="display" width="40%"> <caption style="text-align:center;font-size:40px"><strong>Quote</strong></caption> </table> 
 			-->
-            
+
 
 
 
@@ -330,15 +330,41 @@
 			<div id="stockchartdiv2" style="width:50%; height:500px; margin:0 auto;float: right"></div> 
 			<div id="epschartdiv" style="width:50%; height:500px; margin:0 auto;float: left;"></div> 
 
+
+
+
 		    <table id="table" class="display" width="40%"> <caption style="text-align:center;font-size:40px"><strong>Enterprise Values</strong></caption> </table>  
 		    <table id="table2" class="display" width="80%"> <caption style="text-align:center;font-size:40px"><strong>News</strong></caption> </table> 
 		    
+
+
+
+
+
+
+
+
 		    </div>
 
         </section>
         <!-- End Project -->
-
-
+				<table style="width:600px" class="container">
+                    <tbody>
+                    <tr>
+                        <td style="width:200px">
+                        <div id="heatmapDiv" style="height: 700px;margin: 0px auto"></div>
+                        </div>
+                        </td>
+                        <td style="width:150px">
+                        <div id="heatmapDiv2" style="height: 700px;margin: 0px auto"></div>
+                        </div>
+                        </td>
+                        <td style="width:150px">
+                        <div id="heatmapDiv3" style="height: 700px;margin: 0px auto"></div>
+                        </div>
+                        </td>
+                    </tr>
+                    </tbody></table>
 
 
 
@@ -365,6 +391,11 @@
         <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
 		<script src="js/init.js"></script>
 		<script src="js/scripts.js"></script>
+
+
+        <script src="https://code.jscharting.com/latest/jscharting.js"></script>
+        <script type="text/javascript" src="https://code.jscharting.com/latest/modules/types.js"></script>
+        <script type="text/javascript" src="https://code.jscharting.com/latest/modules/toolbar.js"></script>
 
 
 	</body>
