--- a/stock_dash - Copy.html
+++ b/stock_dash - Copy.html
@@ -109,14 +109,26 @@
 
 
 				    <div class="col-md-12 text-center mt40 pb40">
-				    	<form id="frm1">
-						  <input type="text" name="fname" value="AAPL" style="width:10%">
-						</form> 
-						<form id="frm2">
-						  <input type="text" name="fname2" value="AMZN" style="width:10%">
-						</form> 
+				    	<div class="input-group">
+						  <form id="frm1">
+						  	<input type="text" class="form-control input-sm" value="AAPL" />
+						  </form> 
+						  <span class="input-group-btn" style="width:0px;"></span>
+						  	<form id="frm2">
+						  		<input type="text" class="form-control input-sm" value="AMZN" style="margin-left:-1px" />
+							</form> 
+						    <span class="input-group-btn" style="width:0px;"></span>
+						    <input type="text" class="form-control input-sm" value="test2" style="margin-left:-2px" />
+						</div>
+
+				    	
+
 						<button id="TICKER" class="btn btn-md btn-primary btn-round">Search</button>
 				    </div>
+
+
+
+
 
 					<script>
 						var column_list = [
