--- a/resources.html
+++ b/resources.html
@@ -187,8 +187,36 @@
                         <td>Economic events
                         </td>
                       </tr>
-
-
+                      <tr>
+                        <td><a href="http://vixcentral.com/" target="_blank">Vix Central</a></td>
+                        <td>VIX Futures Term Structure
+                        </td>
+                      </tr>
+                      <tr>
+                        <td><a href="https://www.investopedia.com/earnings-reports-5218419" target="_blank">Investopedia Earnings</a></td>
+                        <td>Earnings Analysis
+                        </td>
+                      </tr>
+                      <tr>
+                        <td><a href="https://au.finance.yahoo.com/quote/FSLR/analysis?p=FSLR" target="_blank">Yahoo Finance</a></td>
+                        <td>Stock Analysis
+                        </td>
+                      </tr>
+                      <tr>
+                        <td><a href="https://www.briefing.com/stock-market-update" target="_blank">Brief.com</a></td>
+                        <td>Stock Market Update
+                        </td>
+                      </tr>
+                      <tr>
+                        <td><a href="https://www.wsj.com/news/business?mod=nav_top_section" target="_blank">Wall Street Journal</a></td>
+                        <td>Business News
+                        </td>
+                      </tr>
+                      <tr>
+                        <td><a href="https://app.koyfin.com/home" target="_blank">Koyfin</a></td>
+                        <td>Financial Data
+                        </td>
+                      </tr>
 
                     </table>
 
