--- a/resources.html
+++ b/resources.html
@@ -217,6 +217,18 @@
                         <td>Financial Data
                         </td>
                       </tr>
+                      <tr>
+                        <td><a href="https://www.mystockodds.com/products/stockodds-powered-dashboards/categories/4730932" target="_blank">Stock Odds Dashboards</a></td>
+                        <td>Stock Odds Power BI
+                        </td>
+                      </tr>
+                      <tr>
+                        <td><a href="https://www.stockodds.net/exploration.php" target="_blank">Stock Odds Filter</a></td>
+                        <td>Stock Odds
+                        </td>
+                      </tr>
+
+
 
                     </table>
 
