add fear and greed

--- a/resources.html
+++ b/resources.html
@@ -227,8 +227,16 @@
                         <td>Stock Odds
                         </td>
                       </tr>
-
-
+                      <tr>
+                        <td><a href="https://edition.cnn.com/markets/fear-and-greed" target="_blank">CNN Markets</a></td>
+                        <td>Fear and Greed
+                        </td>
+                      </tr>
+                      <tr>
+                        <td><a href="https://alternative.me/crypto/fear-and-greed-index/" target="_blank">Alternative.me</a></td>
+                        <td>Fear and Greed Crypto
+                        </td>
+                      </tr>
 
                     </table>
 
