--- a/resources.html
+++ b/resources.html
@@ -237,6 +237,11 @@
                         <td>Fear and Greed Crypto
                         </td>
                       </tr>
+                      <tr>
+                        <td><a href="https://www.indexarb.com/" target="_blank">index arb</a></td>
+                        <td>See S&P Fair Value
+                        </td>
+                      </tr>
 
                     </table>
 
