--- a/resources.html
+++ b/resources.html
@@ -238,6 +238,11 @@
                         </td>
                       </tr>
                       <tr>
+                        <td><a href="https://cryptobubbles.net/" target="_blank">cryptobubbles.net</a></td>
+                        <td>Crypto Bubbles
+                        </td>
+                      </tr>
+                      <tr>
                         <td><a href="https://www.indexarb.com/" target="_blank">index arb</a></td>
                         <td>See S&P Fair Value
                         </td>
